# Customer-Churn-Prediction

./: .gitignore  MODEL_CARD.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/: fetch_telco.py  generate_customers.py
src/: predict.py  train_models.py  utils.py
tests/: conftest.py  test_calibration.py  test_fetch.py  test_generate.py  test_predict.py  test_preprocessor.py  test_threshold.py  test_utils.py
