[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Predict customer churn on a synthetic dataset with scikit-learn."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "scikit-learn==1.4.2",
    "joblib==1.3.2",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
